# aether

./: .aether-session  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Int  LICENSE-APACHE  LICENSE-MIT  README.md  test_server.py
.github/workflows/: aether-check-example.yml  aether-check.yml  ci.yml  deploy.yml  docs.yml  release.yml
crates/aether-checker/: Cargo.toml
crates/aether-checker/src/: lib.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs  session.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: lib.rs
crates/aether-discipline/: Cargo.toml
crates/aether-discipline/src/: lib.rs
crates/aether-format/: Cargo.toml
crates/aether-format/src/: lib.rs
crates/aether-interp/: Cargo.toml
crates/aether-interp/src/: builtins.rs  env.rs  error.rs  eval.rs  lib.rs  value.rs
crates/aether-ir/: Cargo.toml
crates/aether-ir/src/: expr.rs  lib.rs  lower.rs  module.rs  stmt.rs
crates/aether-lsp/: Cargo.toml
crates/aether-lsp/src/: lib.rs  main.rs
crates/aether-parser/: Cargo.toml
crates/aether-parser/src/: lib.rs
crates/aether-prov/: Cargo.toml
crates/aether-prov-store/: Cargo.toml
crates/aether-prov-store/src/: lib.rs  query.rs  schema.rs  store.rs
crates/aether-prov/src/: lib.rs
crates/aether-runtime/: Cargo.toml
crates/aether-runtime/src/: lib.rs
crates/aether-server/: Cargo.toml
crates/aether-server/src/: main.rs
docs/: index.html  ui.html
docs/ui/: index.html
examples/: hello.aeth
examples/demo/: README.md  lib.rs  main.aeth
spec/: grammar.ebnf  provenance-model.md
tests/: .aether-wellbeing  aitest.ae  calltest.ae  calltest2.ae  conformance.aether-prov.db  factorial.ae  iftest.ae  importtest.ae  letarithtest.ae  letcalltest.ae  lib_trusted.ae  main_import.ae  minimal-test.aeth  mixedprov.ae  multitest.ae  provtest.ae  simple-test.aeth  simpletest4.ae  subtest.ae  test-prov.aeth  test1.aeth  test2.aeth  test_user_fn.rs  working-test.aeth  wraptest.ae  wraptest2.ae  wraptest3.ae
tests/conformance/: 001-hello-world.aeth  001-hello-world.aether-prov.db  002-variables.aeth  003-arithmetic.aeth  004-functions.aeth  005-user-functions.aeth  006-recursion.aeth
tests/debug/: debug-params.aeth  debug-recursion-detailed.aeth  debug-recursion.aeth  debug-reentrancy.aeth  debug-simple-recursion.aeth
tests/fuzz/: Cargo.toml  property_tests.rs
vscode-aether/: package.json  tsconfig.json
vscode-aether/src/: extension.ts
