[workspace]
members = [
    "crates/aether-core",
    "crates/aether-parser", 
    "crates/aether-checker",
    "crates/aether-ir",
    "crates/aether-runtime",
    "crates/aether-prov-store",
    "crates/aether-interp",
    "crates/aether-format",
    "crates/aether-lsp",
    "crates/aether-cli",
    "crates/aether-discipline",
    "crates/aether-server",
    "tests/fuzz",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aether Contributors"]
license = "MIT OR Apache-2.0"
rust-version = "1.70"
homepage = "https://github.com/aether-lang/aether"
repository = "https://github.com/aether-lang/aether"
documentation = "https://docs.rs/aether"

[workspace.dependencies]
# Core dependencies
uuid = { version = "1.6", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Graph and provenance
petgraph = "0.6"
rusqlite = { version = "0.28", features = ["bundled"] }

# LSP dependencies
lsp-types = "0.95"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP server dependencies
axum = "0.7"
tower = "0.4"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"

# Testing and fuzzing
proptest = "1.4"
arbitrary = "1.3"

# Format and diff
similar = "2.3"
prettyplease = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
