[package]
name = "aether-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
aether-parser = { path = "../aether-parser" }
aether-checker = { path = "../aether-checker" }
aether-runtime = { path = "../aether-runtime" }
aether-format = { path = "../aether-format" }
aether-prov = { path = "../aether-prov" }
aether-ir = { path = "../aether-ir" }
aether-interp = { path = "../aether-interp" }
aether-prov-store = { path = "../aether-prov-store" }
aether-discipline = { path = "../aether-discipline" }
clap = { version = "4.0", features = ["derive"] }
similar = "2.0"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
