[package]
name = "aether-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
aether-parser = { path = "../aether-parser" }
aether-checker = { path = "../aether-checker" }
aether-ir = { path = "../aether-ir" }
similar = "2.0"
uuid = { workspace = true }
