[package]
name = "aether-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
aether-parser = { path = "../aether-parser" }
aether-checker = { path = "../aether-checker" }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.95"
dashmap = "5.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
