[package]
name = "aether-prov-store"
version = "0.1.0"
edition = "2021"

[dependencies]
aether-core = { path = "../aether-core" }
aether-ir = { path = "../aether-ir" }
rusqlite = { version = "0.28", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
